started bin/ssg

--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "bin": {
     "nc-init": "bin/init/index.js",
-    "nc-walk": "bin/walk/index.js"
+    "nc-walk": "bin/walk/index.js",
+    "nc-ssg": "bin/ssg/index.js"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
