--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   "homepage": "https://github.com/dustinpfister/node_cli_tools#readme",
   "dependencies": {
     "ejs": "^2.7.1",
+    "express": "^4.17.1",
     "marked": "^0.7.0",
     "mkdirp": "^0.5.1",
     "yargs": "^14.2.0"
