started nc-hexer

--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "nc-init": "bin/init/index.js",
     "nc-walk": "bin/walk/index.js",
     "nc-ssg": "bin/ssg/index.js",
-    "nc-edit": "bin/edit/index.js"
+    "nc-edit": "bin/edit/index.js",
+    "nc-hexer": "bin/hexer/index.js"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
