--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   "dependencies": {
     "ejs": "^2.7.1",
     "express": "^4.17.1",
+    "js-yaml": "^3.13.1",
     "marked": "^0.7.0",
     "mkdirp": "^0.5.1",
     "yargs": "^14.2.0"
